--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ python = "^3.7"
 requests = "^2.22"
 lxml = "^4.3"
 cssselect = "^1.0"
+html2text = "^2019.9"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.0"
